--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
         Quod nihil eos ullam voluptas architecto 
         neque laborum perspiciatis, iure nemo error</p>
-        <img src="images/Girl.png" alt="girl">
+        <img src="images/girl.png" alt="girl">
         <p class="user"><b>Girl</b><br>Director of xyz</p>
         </div>
   </div>
